--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
-  "name": "linxsys-baileys-api",
-  "version": "1.0.0",
-  "description": "linxsys-baileys-api",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
-  },
-  "author": "Jhonnata Paixão",
-  "license": "ISC",
-  "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@hapi/boom": "^10.0.1",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "https": "^1.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
-    "node-webhooks": "^1.4.2",
-    "path": "^0.12.7",
-    "pino-http": "^8.3.3",
-    "pino-multi-stream": "^6.0.0",
-    "pino-pretty": "^10.0.0",
-    "qrcode": "^1.5.1",
-    "qrcode-terminal": "^0.12.0"
-  }
+    "name": "linxsys-baileys-api",
+    "version": "1.0.0",
+    "description": "linxsys-baileys-api",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/server.js",
+        "lint": "eslint src/**/*.js"
+    },
+    "author": "Jhonnata Paixão",
+    "license": "ISC",
+    "dependencies": {
+        "@adiwajshing/baileys": "^5.0.0",
+        "@adiwajshing/keyed-db": "^0.2.4",
+        "@hapi/boom": "^10.0.1",
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "crypto": "^1.0.1",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-formidable": "^1.2.0",
+        "fs": "^0.0.1-security",
+        "https": "^1.0.0",
+        "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
+        "node-webhooks": "^1.4.2",
+        "path": "^0.12.7",
+        "pino-http": "^8.3.3",
+        "pino-multi-stream": "^6.0.0",
+        "pino-pretty": "^10.0.0",
+        "qrcode": "^1.5.1",
+        "qrcode-terminal": "^0.12.0"
+    },
+    "devDependencies": {
+        "eslint": "^8.38.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.7.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "prettier": "^2.8.7"
+    }
 }
