--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "https": "^1.0.0",
         "jsonwebtoken": "^9.0.0",
         "moment": "^2.29.4",
+        "multer": "^1.4.5-lts.1",
         "node-webhooks": "^1.4.2",
         "path": "^0.12.7",
         "pino-http": "^8.3.3",
