--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express-formidable": "^1.2.0",
         "fs": "^0.0.1-security",
         "https": "^1.0.0",
+        "jimp": "^0.22.7",
         "jsonwebtoken": "^9.0.0",
         "moment": "^2.29.4",
         "multer": "^1.4.5-lts.1",
