--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "root": true,
   "env": {
     "browser": true,
-    "es2021": true,
+    "es2022": true,
     "node": true
   },
   "extends": [
@@ -42,6 +42,7 @@
     "no-console": 0,
     "prefer-destructuring": 0,
     "no-shadow": 0,
+    "no-class-assign": 1,
     "no-unused-vars": [
       1,
       {
