alteração na variavel de ambiente

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_PORT=4000
 APP_URL=http://localhost
 
 #Cliente (Lista de endereços dos clientes separados por ',')
-FRONT_END_URL= http://localhost:400,*
+FRONT_END_URL= *
 
 #Nivel de Logs
 LOGGER_LEVEL=debug
