--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules/
 src/service/AppMemory/store/
 src/service/baileys/cache/
 logs/
-.env
 public/
-src/controller/MainController.js
+*.env
+
